fix: update config

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
 
-sources: ["homework2/task2"]
+sources: ["."]
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
